parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    FOR
    THEN

Grammar

Rule 0     S' -> block
Rule 1     block -> LBRACE inblock RBRACE
Rule 2     inblock -> smt inblock
Rule 3     inblock -> smt
Rule 4     smt -> block
Rule 5     smt -> LBRACE RBRACE
Rule 6     block -> LBRACE RBRACE
Rule 7     smt -> NAME EQUALS expression SEMI
Rule 8     smt -> expression expression_index EQUALS expression SEMI
Rule 9     smt -> print_smt
Rule 10    smt -> if_smt
Rule 11    smt -> while_smt
Rule 12    smt -> if_else_smt
Rule 13    print_smt -> PRINT LPAREN expression RPAREN SEMI
Rule 14    if_smt -> IF LPAREN expression RPAREN block
Rule 15    if_else_smt -> IF LPAREN expression RPAREN block ELSE block
Rule 16    while_smt -> WHILE LPAREN expression RPAREN block
Rule 17    expression -> expression expression_index
Rule 18    expression_index -> LSQUAREPAREN expression RSQUAREPAREN
Rule 19    expression -> LSQUAREPAREN expression_head RSQUAREPAREN
Rule 20    expression_head -> expression
Rule 21    expression_head -> expression expression_tail
Rule 22    expression_tail -> DELIMITER expression expression_tail
Rule 23    expression_tail -> <empty>
Rule 24    expression_head -> <empty>
Rule 25    expression -> MINUS expression
Rule 26    expression -> expression PLUS expression
Rule 27    expression -> expression MINUS expression
Rule 28    expression -> expression TIMES expression
Rule 29    expression -> expression DIVIDE expression
Rule 30    expression -> expression FLOOR_DIVIDE expression
Rule 31    expression -> expression MODULUS expression
Rule 32    expression -> expression POWER expression
Rule 33    expression -> expression LESS_THAN expression
Rule 34    expression -> expression LESS_EQUAL expression
Rule 35    expression -> expression GREATER_THAN expression
Rule 36    expression -> expression GREATER_EQUAL expression
Rule 37    expression -> expression DOUBLE_EQUALS expression
Rule 38    expression -> expression IN expression
Rule 39    expression -> expression AND expression
Rule 40    expression -> expression OR expression
Rule 41    expression -> expression NOT_EQUAL expression
Rule 42    expression -> NOT expression
Rule 43    expression -> factor
Rule 44    factor -> NUMBER
Rule 45    expression -> STRING
Rule 46    expression -> smt
Rule 47    expression -> LPAREN expression RPAREN
Rule 48    expression -> NAME
Rule 49    expression -> TRUE
Rule 50    expression -> FALSE

Terminals, with rules where they appear

AND                  : 39
DELIMITER            : 22
DIVIDE               : 29
DOUBLE_EQUALS        : 37
ELSE                 : 15
EQUALS               : 7 8
FALSE                : 50
FLOOR_DIVIDE         : 30
FOR                  : 
GREATER_EQUAL        : 36
GREATER_THAN         : 35
IF                   : 14 15
IN                   : 38
LBRACE               : 1 5 6
LESS_EQUAL           : 34
LESS_THAN            : 33
LPAREN               : 13 14 15 16 47
LSQUAREPAREN         : 18 19
MINUS                : 25 27
MODULUS              : 31
NAME                 : 7 48
NOT                  : 42
NOT_EQUAL            : 41
NUMBER               : 44
OR                   : 40
PLUS                 : 26
POWER                : 32
PRINT                : 13
RBRACE               : 1 5 6
RPAREN               : 13 14 15 16 47
RSQUAREPAREN         : 18 19
SEMI                 : 7 8 13
STRING               : 45
THEN                 : 
TIMES                : 28
TRUE                 : 49
WHILE                : 16
error                : 

Nonterminals, with rules where they appear

block                : 4 14 15 15 16 0
expression           : 7 8 8 13 14 15 16 17 18 20 21 22 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 47
expression_head      : 19
expression_index     : 8 17
expression_tail      : 21 22
factor               : 43
if_else_smt          : 12
if_smt               : 10
inblock              : 1 2
print_smt            : 9
smt                  : 2 3 46
while_smt            : 11

Parsing method: LALR

state 0

    (0) S' -> . block
    (1) block -> . LBRACE inblock RBRACE
    (6) block -> . LBRACE RBRACE

    LBRACE          shift and go to state 1

    block                          shift and go to state 2

state 1

    (1) block -> LBRACE . inblock RBRACE
    (6) block -> LBRACE . RBRACE
    (2) inblock -> . smt inblock
    (3) inblock -> . smt
    (4) smt -> . block
    (5) smt -> . LBRACE RBRACE
    (7) smt -> . NAME EQUALS expression SEMI
    (8) smt -> . expression expression_index EQUALS expression SEMI
    (9) smt -> . print_smt
    (10) smt -> . if_smt
    (11) smt -> . while_smt
    (12) smt -> . if_else_smt
    (1) block -> . LBRACE inblock RBRACE
    (6) block -> . LBRACE RBRACE
    (17) expression -> . expression expression_index
    (19) expression -> . LSQUAREPAREN expression_head RSQUAREPAREN
    (25) expression -> . MINUS expression
    (26) expression -> . expression PLUS expression
    (27) expression -> . expression MINUS expression
    (28) expression -> . expression TIMES expression
    (29) expression -> . expression DIVIDE expression
    (30) expression -> . expression FLOOR_DIVIDE expression
    (31) expression -> . expression MODULUS expression
    (32) expression -> . expression POWER expression
    (33) expression -> . expression LESS_THAN expression
    (34) expression -> . expression LESS_EQUAL expression
    (35) expression -> . expression GREATER_THAN expression
    (36) expression -> . expression GREATER_EQUAL expression
    (37) expression -> . expression DOUBLE_EQUALS expression
    (38) expression -> . expression IN expression
    (39) expression -> . expression AND expression
    (40) expression -> . expression OR expression
    (41) expression -> . expression NOT_EQUAL expression
    (42) expression -> . NOT expression
    (43) expression -> . factor
    (45) expression -> . STRING
    (46) expression -> . smt
    (47) expression -> . LPAREN expression RPAREN
    (48) expression -> . NAME
    (49) expression -> . TRUE
    (50) expression -> . FALSE
    (13) print_smt -> . PRINT LPAREN expression RPAREN SEMI
    (14) if_smt -> . IF LPAREN expression RPAREN block
    (16) while_smt -> . WHILE LPAREN expression RPAREN block
    (15) if_else_smt -> . IF LPAREN expression RPAREN block ELSE block
    (44) factor -> . NUMBER

    RBRACE          shift and go to state 13
    LBRACE          shift and go to state 12
    NAME            shift and go to state 4
    LSQUAREPAREN    shift and go to state 3
    MINUS           shift and go to state 6
    NOT             shift and go to state 25
    STRING          shift and go to state 8
    LPAREN          shift and go to state 11
    TRUE            shift and go to state 24
    FALSE           shift and go to state 7
    PRINT           shift and go to state 14
    IF              shift and go to state 10
    WHILE           shift and go to state 16
    NUMBER          shift and go to state 21

    while_smt                      shift and go to state 23
    factor                         shift and go to state 9
    smt                            shift and go to state 15
    expression                     shift and go to state 17
    print_smt                      shift and go to state 5
    block                          shift and go to state 18
    inblock                        shift and go to state 19
    if_else_smt                    shift and go to state 20
    if_smt                         shift and go to state 22

state 2

    (0) S' -> block .



state 3

    (19) expression -> LSQUAREPAREN . expression_head RSQUAREPAREN
    (20) expression_head -> . expression
    (21) expression_head -> . expression expression_tail
    (24) expression_head -> .
    (17) expression -> . expression expression_index
    (19) expression -> . LSQUAREPAREN expression_head RSQUAREPAREN
    (25) expression -> . MINUS expression
    (26) expression -> . expression PLUS expression
    (27) expression -> . expression MINUS expression
    (28) expression -> . expression TIMES expression
    (29) expression -> . expression DIVIDE expression
    (30) expression -> . expression FLOOR_DIVIDE expression
    (31) expression -> . expression MODULUS expression
    (32) expression -> . expression POWER expression
    (33) expression -> . expression LESS_THAN expression
    (34) expression -> . expression LESS_EQUAL expression
    (35) expression -> . expression GREATER_THAN expression
    (36) expression -> . expression GREATER_EQUAL expression
    (37) expression -> . expression DOUBLE_EQUALS expression
    (38) expression -> . expression IN expression
    (39) expression -> . expression AND expression
    (40) expression -> . expression OR expression
    (41) expression -> . expression NOT_EQUAL expression
    (42) expression -> . NOT expression
    (43) expression -> . factor
    (45) expression -> . STRING
    (46) expression -> . smt
    (47) expression -> . LPAREN expression RPAREN
    (48) expression -> . NAME
    (49) expression -> . TRUE
    (50) expression -> . FALSE
    (44) factor -> . NUMBER
    (4) smt -> . block
    (5) smt -> . LBRACE RBRACE
    (7) smt -> . NAME EQUALS expression SEMI
    (8) smt -> . expression expression_index EQUALS expression SEMI
    (9) smt -> . print_smt
    (10) smt -> . if_smt
    (11) smt -> . while_smt
    (12) smt -> . if_else_smt
    (1) block -> . LBRACE inblock RBRACE
    (6) block -> . LBRACE RBRACE
    (13) print_smt -> . PRINT LPAREN expression RPAREN SEMI
    (14) if_smt -> . IF LPAREN expression RPAREN block
    (16) while_smt -> . WHILE LPAREN expression RPAREN block
    (15) if_else_smt -> . IF LPAREN expression RPAREN block ELSE block

    RSQUAREPAREN    reduce using rule 24 (expression_head -> .)
    LSQUAREPAREN    shift and go to state 3
    MINUS           shift and go to state 6
    NOT             shift and go to state 25
    STRING          shift and go to state 8
    LPAREN          shift and go to state 11
    NAME            shift and go to state 26
    TRUE            shift and go to state 24
    FALSE           shift and go to state 7
    NUMBER          shift and go to state 21
    LBRACE          shift and go to state 12
    PRINT           shift and go to state 14
    IF              shift and go to state 10
    WHILE           shift and go to state 16

    factor                         shift and go to state 9
    while_smt                      shift and go to state 23
    expression                     shift and go to state 29
    expression_head                shift and go to state 27
    print_smt                      shift and go to state 5
    if_else_smt                    shift and go to state 20
    smt                            shift and go to state 28
    block                          shift and go to state 18
    if_smt                         shift and go to state 22

state 4

    (7) smt -> NAME . EQUALS expression SEMI
    (48) expression -> NAME .

    EQUALS          shift and go to state 30
    PLUS            reduce using rule 48 (expression -> NAME .)
    MINUS           reduce using rule 48 (expression -> NAME .)
    TIMES           reduce using rule 48 (expression -> NAME .)
    DIVIDE          reduce using rule 48 (expression -> NAME .)
    FLOOR_DIVIDE    reduce using rule 48 (expression -> NAME .)
    MODULUS         reduce using rule 48 (expression -> NAME .)
    POWER           reduce using rule 48 (expression -> NAME .)
    LESS_THAN       reduce using rule 48 (expression -> NAME .)
    LESS_EQUAL      reduce using rule 48 (expression -> NAME .)
    GREATER_THAN    reduce using rule 48 (expression -> NAME .)
    GREATER_EQUAL   reduce using rule 48 (expression -> NAME .)
    DOUBLE_EQUALS   reduce using rule 48 (expression -> NAME .)
    IN              reduce using rule 48 (expression -> NAME .)
    AND             reduce using rule 48 (expression -> NAME .)
    OR              reduce using rule 48 (expression -> NAME .)
    NOT_EQUAL       reduce using rule 48 (expression -> NAME .)
    LSQUAREPAREN    reduce using rule 48 (expression -> NAME .)


state 5

    (9) smt -> print_smt .

    PLUS            reduce using rule 9 (smt -> print_smt .)
    MINUS           reduce using rule 9 (smt -> print_smt .)
    TIMES           reduce using rule 9 (smt -> print_smt .)
    DIVIDE          reduce using rule 9 (smt -> print_smt .)
    FLOOR_DIVIDE    reduce using rule 9 (smt -> print_smt .)
    MODULUS         reduce using rule 9 (smt -> print_smt .)
    POWER           reduce using rule 9 (smt -> print_smt .)
    LESS_THAN       reduce using rule 9 (smt -> print_smt .)
    LESS_EQUAL      reduce using rule 9 (smt -> print_smt .)
    GREATER_THAN    reduce using rule 9 (smt -> print_smt .)
    GREATER_EQUAL   reduce using rule 9 (smt -> print_smt .)
    DOUBLE_EQUALS   reduce using rule 9 (smt -> print_smt .)
    IN              reduce using rule 9 (smt -> print_smt .)
    AND             reduce using rule 9 (smt -> print_smt .)
    OR              reduce using rule 9 (smt -> print_smt .)
    NOT_EQUAL       reduce using rule 9 (smt -> print_smt .)
    LSQUAREPAREN    reduce using rule 9 (smt -> print_smt .)
    DELIMITER       reduce using rule 9 (smt -> print_smt .)
    RSQUAREPAREN    reduce using rule 9 (smt -> print_smt .)
    RPAREN          reduce using rule 9 (smt -> print_smt .)
    SEMI            reduce using rule 9 (smt -> print_smt .)
    LBRACE          reduce using rule 9 (smt -> print_smt .)
    NAME            reduce using rule 9 (smt -> print_smt .)
    NOT             reduce using rule 9 (smt -> print_smt .)
    STRING          reduce using rule 9 (smt -> print_smt .)
    LPAREN          reduce using rule 9 (smt -> print_smt .)
    TRUE            reduce using rule 9 (smt -> print_smt .)
    FALSE           reduce using rule 9 (smt -> print_smt .)
    PRINT           reduce using rule 9 (smt -> print_smt .)
    IF              reduce using rule 9 (smt -> print_smt .)
    WHILE           reduce using rule 9 (smt -> print_smt .)
    NUMBER          reduce using rule 9 (smt -> print_smt .)
    RBRACE          reduce using rule 9 (smt -> print_smt .)


state 6

    (25) expression -> MINUS . expression
    (17) expression -> . expression expression_index
    (19) expression -> . LSQUAREPAREN expression_head RSQUAREPAREN
    (25) expression -> . MINUS expression
    (26) expression -> . expression PLUS expression
    (27) expression -> . expression MINUS expression
    (28) expression -> . expression TIMES expression
    (29) expression -> . expression DIVIDE expression
    (30) expression -> . expression FLOOR_DIVIDE expression
    (31) expression -> . expression MODULUS expression
    (32) expression -> . expression POWER expression
    (33) expression -> . expression LESS_THAN expression
    (34) expression -> . expression LESS_EQUAL expression
    (35) expression -> . expression GREATER_THAN expression
    (36) expression -> . expression GREATER_EQUAL expression
    (37) expression -> . expression DOUBLE_EQUALS expression
    (38) expression -> . expression IN expression
    (39) expression -> . expression AND expression
    (40) expression -> . expression OR expression
    (41) expression -> . expression NOT_EQUAL expression
    (42) expression -> . NOT expression
    (43) expression -> . factor
    (45) expression -> . STRING
    (46) expression -> . smt
    (47) expression -> . LPAREN expression RPAREN
    (48) expression -> . NAME
    (49) expression -> . TRUE
    (50) expression -> . FALSE
    (44) factor -> . NUMBER
    (4) smt -> . block
    (5) smt -> . LBRACE RBRACE
    (7) smt -> . NAME EQUALS expression SEMI
    (8) smt -> . expression expression_index EQUALS expression SEMI
    (9) smt -> . print_smt
    (10) smt -> . if_smt
    (11) smt -> . while_smt
    (12) smt -> . if_else_smt
    (1) block -> . LBRACE inblock RBRACE
    (6) block -> . LBRACE RBRACE
    (13) print_smt -> . PRINT LPAREN expression RPAREN SEMI
    (14) if_smt -> . IF LPAREN expression RPAREN block
    (16) while_smt -> . WHILE LPAREN expression RPAREN block
    (15) if_else_smt -> . IF LPAREN expression RPAREN block ELSE block

    LSQUAREPAREN    shift and go to state 3
    MINUS           shift and go to state 6
    NOT             shift and go to state 25
    STRING          shift and go to state 8
    LPAREN          shift and go to state 11
    NAME            shift and go to state 26
    TRUE            shift and go to state 24
    FALSE           shift and go to state 7
    NUMBER          shift and go to state 21
    LBRACE          shift and go to state 12
    PRINT           shift and go to state 14
    IF              shift and go to state 10
    WHILE           shift and go to state 16

    while_smt                      shift and go to state 23
    factor                         shift and go to state 9
    smt                            shift and go to state 28
    expression                     shift and go to state 31
    block                          shift and go to state 18
    print_smt                      shift and go to state 5
    if_else_smt                    shift and go to state 20
    if_smt                         shift and go to state 22

state 7

    (50) expression -> FALSE .

    PLUS            reduce using rule 50 (expression -> FALSE .)
    MINUS           reduce using rule 50 (expression -> FALSE .)
    TIMES           reduce using rule 50 (expression -> FALSE .)
    DIVIDE          reduce using rule 50 (expression -> FALSE .)
    FLOOR_DIVIDE    reduce using rule 50 (expression -> FALSE .)
    MODULUS         reduce using rule 50 (expression -> FALSE .)
    POWER           reduce using rule 50 (expression -> FALSE .)
    LESS_THAN       reduce using rule 50 (expression -> FALSE .)
    LESS_EQUAL      reduce using rule 50 (expression -> FALSE .)
    GREATER_THAN    reduce using rule 50 (expression -> FALSE .)
    GREATER_EQUAL   reduce using rule 50 (expression -> FALSE .)
    DOUBLE_EQUALS   reduce using rule 50 (expression -> FALSE .)
    IN              reduce using rule 50 (expression -> FALSE .)
    AND             reduce using rule 50 (expression -> FALSE .)
    OR              reduce using rule 50 (expression -> FALSE .)
    NOT_EQUAL       reduce using rule 50 (expression -> FALSE .)
    LSQUAREPAREN    reduce using rule 50 (expression -> FALSE .)
    DELIMITER       reduce using rule 50 (expression -> FALSE .)
    RSQUAREPAREN    reduce using rule 50 (expression -> FALSE .)
    RPAREN          reduce using rule 50 (expression -> FALSE .)
    SEMI            reduce using rule 50 (expression -> FALSE .)


state 8

    (45) expression -> STRING .

    PLUS            reduce using rule 45 (expression -> STRING .)
    MINUS           reduce using rule 45 (expression -> STRING .)
    TIMES           reduce using rule 45 (expression -> STRING .)
    DIVIDE          reduce using rule 45 (expression -> STRING .)
    FLOOR_DIVIDE    reduce using rule 45 (expression -> STRING .)
    MODULUS         reduce using rule 45 (expression -> STRING .)
    POWER           reduce using rule 45 (expression -> STRING .)
    LESS_THAN       reduce using rule 45 (expression -> STRING .)
    LESS_EQUAL      reduce using rule 45 (expression -> STRING .)
    GREATER_THAN    reduce using rule 45 (expression -> STRING .)
    GREATER_EQUAL   reduce using rule 45 (expression -> STRING .)
    DOUBLE_EQUALS   reduce using rule 45 (expression -> STRING .)
    IN              reduce using rule 45 (expression -> STRING .)
    AND             reduce using rule 45 (expression -> STRING .)
    OR              reduce using rule 45 (expression -> STRING .)
    NOT_EQUAL       reduce using rule 45 (expression -> STRING .)
    LSQUAREPAREN    reduce using rule 45 (expression -> STRING .)
    DELIMITER       reduce using rule 45 (expression -> STRING .)
    RSQUAREPAREN    reduce using rule 45 (expression -> STRING .)
    RPAREN          reduce using rule 45 (expression -> STRING .)
    SEMI            reduce using rule 45 (expression -> STRING .)


state 9

    (43) expression -> factor .

    PLUS            reduce using rule 43 (expression -> factor .)
    MINUS           reduce using rule 43 (expression -> factor .)
    TIMES           reduce using rule 43 (expression -> factor .)
    DIVIDE          reduce using rule 43 (expression -> factor .)
    FLOOR_DIVIDE    reduce using rule 43 (expression -> factor .)
    MODULUS         reduce using rule 43 (expression -> factor .)
    POWER           reduce using rule 43 (expression -> factor .)
    LESS_THAN       reduce using rule 43 (expression -> factor .)
    LESS_EQUAL      reduce using rule 43 (expression -> factor .)
    GREATER_THAN    reduce using rule 43 (expression -> factor .)
    GREATER_EQUAL   reduce using rule 43 (expression -> factor .)
    DOUBLE_EQUALS   reduce using rule 43 (expression -> factor .)
    IN              reduce using rule 43 (expression -> factor .)
    AND             reduce using rule 43 (expression -> factor .)
    OR              reduce using rule 43 (expression -> factor .)
    NOT_EQUAL       reduce using rule 43 (expression -> factor .)
    LSQUAREPAREN    reduce using rule 43 (expression -> factor .)
    DELIMITER       reduce using rule 43 (expression -> factor .)
    RSQUAREPAREN    reduce using rule 43 (expression -> factor .)
    RPAREN          reduce using rule 43 (expression -> factor .)
    SEMI            reduce using rule 43 (expression -> factor .)


state 10

    (14) if_smt -> IF . LPAREN expression RPAREN block
    (15) if_else_smt -> IF . LPAREN expression RPAREN block ELSE block

    LPAREN          shift and go to state 32


state 11
